syntax = "proto3";

package vault.events.v1;

message VaultInitEvent {
  bytes underlying_mint = 1;
  bytes underlying_token_acc = 2;
  uint32 underlying_decimals = 3;
  uint64 deposit_limit = 4;
  uint64 min_user_deposit = 5;
}

message VaultAddStrtegyEvent {
  bytes strategy_key = 1;
  uint64 current_debt = 2;
  uint64 max_debt = 3;
  uint64 last_update = 4;
  bool is_active = 5;
}

message VaultEvent {
  oneof event {
    VaultInitEvent initialize = 1;
    VaultAddStrtegyEvent strategyAdd = 2;
  }
}

//Raw logs from the vault program
message VaultEventLogs {
  repeated bytes logs = 1;
}